Refactor TnTLayout and update related styles and scripts
- Updated `TnTLayout.razor` to inherit from `TnTComponentBase`.
- Removed `JsModulePath` from `TnTLayout.razor.cs`.
- Deleted all functions from `TnTLayout.razor.js`.
- Introduced a new grid-based layout in `_layout.scss`.
- Enhanced responsiveness and transitions in layout styles.
- Set `overflow-x` to `clip` in `style.scss`.
- Updated `PackageTags` in `TnTComponents.csproj` to include "Material Design".
- Added `EnforceCodeStyleInBuild` property in the project file.
- Removed `bodyScrollListener` function from `TnTComponents.lib.module.js`.

--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -12,24 +12,9 @@
         <Company>NT Technologies</Company>
         <PackageProjectUrl>https://github.com/Notallthatevil/TnTComponents</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Notallthatevil/TnTComponents</RepositoryUrl>
-        <PackageTags>Blazor;Web;UI;.NET8;.NET9;Material</PackageTags>
+        <PackageTags>Blazor;Web;UI;.NET8;.NET9;Material Design</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
-      <IsTrimmable>False</IsTrimmable>
-      <IsAotCompatible>False</IsAotCompatible>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0|AnyCPU'">
-      <IsTrimmable>False</IsTrimmable>
-      <IsAotCompatible>False</IsAotCompatible>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0|AnyCPU'">
-      <IsTrimmable>False</IsTrimmable>
-      <IsAotCompatible>False</IsAotCompatible>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0|AnyCPU'">
-      <IsTrimmable>False</IsTrimmable>
-      <IsAotCompatible>False</IsAotCompatible>
+        <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
     </PropertyGroup>
     <ItemGroup>
       <Content Remove="compilerconfig.json" />
