--- a/LiveTest/LiveTest/LiveTest.csproj
+++ b/LiveTest/LiveTest/LiveTest.csproj
@@ -14,6 +14,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\TnTComponents.AspNetCore\TnTComponents.AspNetCore.csproj" />
+        <ProjectReference Include="..\..\TnTComponents.Extensions\TnTComponents.Extensions.csproj" />
         <ProjectReference Include="..\LiveTest.Client\LiveTest.Client.csproj" />
 
     </ItemGroup>
