--- a/LiveTest/LiveTest/LiveTest.csproj
+++ b/LiveTest/LiveTest/LiveTest.csproj
@@ -25,4 +25,8 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\Themes\" />
+    </ItemGroup>
+
 </Project>
