Add tests and refactor TnTPageScriptComponent
- Introduced `TnTPageScriptComponent_Tests` with unit tests for constructor exceptions, disposal behavior, and rendering.
- Changed generic type parameter from `TComponent` to `TDerived` in `TnTPageScriptComponent` for CRTP compliance.
- Updated disposal logic to handle `IsolatedJsModule` asynchronously and added exception handling for disconnected JS runtime.
- Added a new `Infrastructure` folder in the project file for potential restructuring.

--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -47,4 +47,8 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="compilerconfig.json" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Infrastructure\" />
+    </ItemGroup>
 </Project>
