--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
     <PropertyGroup>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -9,7 +9,7 @@
         <Company>NT Technologies</Company>
         <PackageProjectUrl>https://github.com/Notallthatevil/TnTComponents</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Notallthatevil/TnTComponents</RepositoryUrl>
-        <PackageTags>Blazor;Web;UI;.NET8;.NET9;Material Design</PackageTags>
+        <PackageTags>Blazor;Web;UI;.NET9;.NET10;Material Design</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
     </PropertyGroup>
@@ -30,19 +30,21 @@
     <ItemGroup>
         <PackageReference Include="DartSassBuilder" Version="1.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.5" />
-        <PackageReference Include="System.Text.Encodings.Web" Version="9.0.5" />
-    </ItemGroup>
-
-    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.16" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0-rc.1.25451.107" />
+        <PackageReference Include="System.Text.Encodings.Web" Version="9.0.9" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly">
-            <Version>9.0.5</Version>
+            <Version>9.0.9</Version>
         </PackageReference>
     </ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly">
+			<Version>10.0.0-rc.1.25451.107</Version>
+		</PackageReference>
+	</ItemGroup>
 
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="\" />
