--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "jest-environment-jsdom": "^29.7.0"
   },
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:js": "npm run test"
   },
   "jest": {
     "testEnvironment": "jsdom",
     "roots": [
-      "<rootDir>/TnTComponents/Carousel/__tests__"
+      "<rootDir>/TnTComponents/Carousel/__tests__",
+      "<rootDir>/TnTComponents/Core/__tests__"
     ],
     "setupFiles": [
       "<rootDir>/TnTComponents/Carousel/jest.setup.js"
