Update .NET version and add redundant setup step
Updated the .NET setup step in `CreateRelease.yml` to use
`.NET` version `10.x` instead of `9.x`. Additionally, a
duplicate `.NET` setup step was added with the same
configuration, which introduces redundancy in the workflow.

--- a/.github/workflows/CreateRelease.yml
+++ b/.github/workflows/CreateRelease.yml
@@ -22,6 +22,12 @@ jobs:
       id: version_step # step id used as reference for output values
       uses: gittools/actions/gitversion/execute@v3.1.1
 
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '10.x'
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
