Add tests and refactor TnTAccordion component logic
Added comprehensive unit tests for the `TnTAccordion` component in both C# and JavaScript, covering rendering, child management, lifecycle methods, and property enforcement. Refactored the `OnInitialized` method in `TnTAccordionChild` to improve `OpenByDefault` logic and enforce `LimitToOneExpanded`.

Updated Jest configuration in `package.json` to include the new test directory. Enhanced JavaScript tests with mock implementations for `ResizeObserver` and `MutationObserver`. Verified proper DOM removal of child components and validated custom styles and ripple effects. Improved maintainability and reliability by addressing edge cases and ensuring consistent behavior across layers.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "testEnvironment": "jsdom",
     "roots": [
       "<rootDir>/TnTComponents/Carousel/__tests__",
-      "<rootDir>/TnTComponents/Core/__tests__"
+      "<rootDir>/TnTComponents/Core/__tests__",
+      "<rootDir>/TnTComponents/Accordion/__tests__"
     ],
     "setupFiles": [
       "<rootDir>/TnTComponents/Carousel/jest.setup.js"
