--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "roots": [
       "<rootDir>/TnTComponents/Carousel/__tests__",
       "<rootDir>/TnTComponents/Core/__tests__",
-      "<rootDir>/TnTComponents/Accordion/__tests__"
+      "<rootDir>/TnTComponents/Accordion/__tests__",
+      "<rootDir>/TnTComponents/Animation/__tests__"
     ],
     "setupFiles": [
       "<rootDir>/TnTComponents/Carousel/jest.setup.js"
