Add tests and enhancements for TnTMarkdownEditor
Introduced comprehensive unit tests for the `TnTMarkdownEditor`
component, covering rendering, parameter binding, event handling,
and JavaScript interop. Added edge case validations and ensured
the component implements `IAsyncDisposable` and `IDisposable`.

Enhanced the `UpdateValue` method to handle missing `<body>` tags
and improved asynchronous state updates.

Added JavaScript tests to validate the structure and functionality
of the `TnTMarkdownEditor` module, including CSS loading logic,
EasyMDE configuration, and `dotNetRef` mapping.

Updated `TnTComponents.Tests.csproj` and `package.json` to support
new tests. Added `jest.setup.js` for mocking global objects in the
test environment. Improved maintainability and test coverage.

--- a/package.json
+++ b/package.json
@@ -16,19 +16,28 @@
       "<rootDir>/TnTComponents/Carousel/__tests__",
       "<rootDir>/TnTComponents/Core/__tests__",
       "<rootDir>/TnTComponents/Accordion/__tests__",
-      "<rootDir>/TnTComponents/Animation/__tests__"
+      "<rootDir>/TnTComponents/Animation/__tests__",
+      "<rootDir>/TnTComponents/Editors/__tests__"
     ],
     "setupFiles": [
       "<rootDir>/TnTComponents/Carousel/jest.setup.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/TnTComponents/Editors/__tests__/jest.setup.js"
     ],
     "moduleFileExtensions": [
       "js",
       "mjs"
     ],
     "transform": {},
+    "testMatch": [
+      "**/__tests__/**/*.test.js",
+      "**/__tests__/**/*.spec.js"
+    ],
     "testPathIgnorePatterns": [
       "/node_modules/",
-      "jest.global.js"
+      "jest.global.js",
+      "jest.setup.js"
     ]
   }
 }
