Add tests and enhancements for theming components
Introduced unit tests for `TnTMeasurements` and `TnTThemeToggle` components to validate functionality, including constructor, parameters, CSS generation, and edge cases. Added JavaScript tests for `TnTThemeToggle` to ensure proper handling of theme/contrast storage, DOM manipulation, and CSS file validation.

Enhanced `TnTMeasurements.razor` with reusable typography styles. Refactored `TnTThemeToggle.razor.js` for improved maintainability and reliability. Updated `package.json` to include new theming test directory.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "<rootDir>/TnTComponents/Accordion/__tests__",
         "<rootDir>/TnTComponents/Animation/__tests__",
         "<rootDir>/TnTComponents/Editors/__tests__",
-        "<rootDir>/TnTComponents/TabView/__tests__"
+        "<rootDir>/TnTComponents/TabView/__tests__",
+        "<rootDir>/TnTComponents/Theming/__tests__"
     ],
     "setupFiles": [
       "<rootDir>/TnTComponents/Carousel/jest.setup.js"
