--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -1,51 +1,51 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
-    <PropertyGroup>
-        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
-        <GenerateDocumentationFile>False</GenerateDocumentationFile>
-        <Title>TnTComponents</Title>
-        <Company>NT Technologies</Company>
-        <PackageProjectUrl>https://github.com/Notallthatevil/TnTComponents</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/Notallthatevil/TnTComponents</RepositoryUrl>
-        <PackageTags>Blazor;Web;UI;.NET9;.NET10;Material Design</PackageTags>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0|AnyCPU'">
-      <WarningLevel>8</WarningLevel>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0|AnyCPU'">
-      <WarningLevel>8</WarningLevel>
-    </PropertyGroup>
-    
-    <ItemGroup>
-        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-            <_Parameter1>TnTComponents.Tests</_Parameter1>
-        </AssemblyAttribute>
-    </ItemGroup>
-    
-    <ItemGroup>
-        <Content Remove="compilerconfig.json" />
-    </ItemGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<GenerateDocumentationFile>False</GenerateDocumentationFile>
+		<Title>TnTComponents</Title>
+		<Company>NT Technologies</Company>
+		<PackageProjectUrl>https://github.com/Notallthatevil/TnTComponents</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/Notallthatevil/TnTComponents</RepositoryUrl>
+		<PackageTags>Blazor;Web;UI;Components;Material;MaterialDesign;WebAssembly;BlazorComponents;.NET9;.NET10</PackageTags>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+		<WarningLevel>8</WarningLevel>
+		<PackageId>TnTComponents</PackageId>
+		<Authors>NT Technologies</Authors>
+		<Description>Collection of Material-design inspired Blazor UI components for Web and WebAssembly projects. Designed for .NET 9 and .NET 10.</Description>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryType>git</RepositoryType>
+	</PropertyGroup>
+	
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>TnTComponents.Tests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 
-    <ItemGroup>
-        <SupportedPlatform Include="browser" />
-    </ItemGroup>
+	<ItemGroup>
+		<Content Remove="compilerconfig.json" />
+	</ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="DartSassBuilder" Version="1.1.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0-rc.1.25451.107" />
-        <PackageReference Include="System.Text.Encodings.Web" Version="9.0.9" />
-    </ItemGroup>
+	<ItemGroup>
+		<SupportedPlatform Include="browser" />
+	</ItemGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly">
-            <Version>9.0.9</Version>
-        </PackageReference>
-    </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="DartSassBuilder" Version="1.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0-rc.1.25451.107" />
+		<PackageReference Include="System.Text.Encodings.Web" Version="10.0.0-rc.1.25451.107" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly">
+			<Version>9.0.9</Version>
+		</PackageReference>
+	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly">
@@ -53,16 +53,16 @@
 		</PackageReference>
 	</ItemGroup>
 
-    <ItemGroup>
-        <None Include="..\README.md" Pack="true" PackagePath="\" />
-        <None Include="compilerconfig.json" />
-    </ItemGroup>
+	<ItemGroup>
+		<None Include="..\README.md" Pack="true" PackagePath="\" />
+		<None Include="compilerconfig.json" />
+	</ItemGroup>
 
-    <Target Name="DeleteCssFiles" BeforeTargets="BeforeClean">
-        <ItemGroup>
-            <CssFiles Include=".\**\*.css" />
-        </ItemGroup>
+	<Target Name="DeleteCssFiles" BeforeTargets="BeforeClean">
+		<ItemGroup>
+			<CssFiles Include=".\**\*.css" />
+		</ItemGroup>
 
-        <Delete Files="@(CssFiles)" />
-    </Target>
+		<Delete Files="@(CssFiles)" />
+	</Target>
 </Project>
