Enhance TnTComponents for AOT, usability, and maintainability
- Added `Logo.png` as the NuGet package icon.
- Enhanced `TnTCarousel` and `TnTCarouselItem` with new parameters, improved lifecycle management, and better documentation.
- Improved AOT compatibility by refining `[DynamicallyAccessedMembers]` usage and adding trimming-safe logic.
- Refactored `TnTInputBase`, `TnTInputSelect`, and `TnTGridSort` for better readability and maintainability.
- Updated `TnTDataGrid` to support nullable `Items` and asynchronous query execution.
- Introduced `LoadCount` and `Reset` methods in `TnTVirtualize` for better state management.
- Updated `TnTComponents.csproj` with AOT compatibility, stricter warnings, and package metadata.
- General improvements: better formatting, XML documentation, and trimming safety.

--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -18,6 +18,11 @@
 		<Description>Collection of Material-design inspired Blazor UI components for Web and WebAssembly projects. Designed for .NET 9 and .NET 10.</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<RepositoryType>git</RepositoryType>
+		<IsAotCompatible>true</IsAotCompatible>
+		<LangVersion>latest</LangVersion>
+		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+		<SignAssembly>False</SignAssembly>
+		<PackageIcon>Logo.png</PackageIcon>
 	</PropertyGroup>
 	
 	<ItemGroup>
@@ -54,6 +59,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Include="..\Logo.png">
+		  <Pack>True</Pack>
+		  <PackagePath>\</PackagePath>
+		</None>
 		<None Include="..\README.md" Pack="true" PackagePath="\" />
 		<None Include="compilerconfig.json" />
 	</ItemGroup>
