Update CI pipeline to test multiple .NET versions
Updated the `dotnet-version` in the `Setup dotnet` step to use a specific version (`8.0.x`) instead of a dynamic version.
Added additional `Setup dotnet` steps to explicitly test against .NET versions `9.0.x` and `10.0.x`.

These changes ensure the CI pipeline validates compatibility across multiple .NET versions, improving reliability and maintainability.

--- a/.github/workflows/ci-aot.yml
+++ b/.github/workflows/ci-aot.yml
@@ -27,7 +27,17 @@ jobs:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: ${{ matrix.dotnet-version }}
+        dotnet-version: '8.0.x'
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '9.0.x'
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '10.0.x'
 
     - name: publish AOT testApp, assert static analysis warning count, and run the app
       shell: pwsh
