Remove code coverage steps from CI/CD pipeline
The `dotnet test` command was updated to remove the
`--settings coverlet.runsettings` argument, discontinuing the use
of Coverlet settings for code coverage. The step to install the
`dotnet-coverage` tool globally was removed, and the "Check code
coverage" step was also eliminated. These changes simplify the
pipeline by removing code coverage-related configurations,
potentially in favor of alternative tools or methods outside the
workflow.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,7 +47,7 @@ jobs:
       run: dotnet build --configuration Release
 
     - name: Run dotnet tests with coverage
-      run: dotnet test --no-build --settings coverlet.runsettings --configuration Release
+      run: dotnet test --no-build --configuration Release
 
     - name: Install dotnet-coverage
       run: dotnet tool install --global dotnet-coverage
