Simplify CI workflow by removing matrix strategy
The matrix strategy for testing multiple OS, runtimes, and .NET
versions has been removed. The workflow now runs on a single
hardcoded environment (`ubuntu-latest`). This change reduces
complexity but limits testing to a single configuration.

--- a/.github/workflows/ci-aot.yml
+++ b/.github/workflows/ci-aot.yml
@@ -12,13 +12,7 @@ on:
 
 jobs:
   aot-test:
-    strategy:
-      matrix:
-        os: [ ubuntu-latest ]
-        runtime: [ linux-x64 ]
-        dotnet-version: ['9.0.x', '10.0.x']
-
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
       with:
