Add CancellationToken support and improve test suite
Updated all async test methods to include `Xunit.TestContext.Current.CancellationToken` for better cancellation handling. Refactored method calls to pass `cancellationToken` parameters consistently. Enhanced test coverage by addressing edge cases like null keys, empty collections, and whitespace values.

Improved code formatting and readability by aligning braces and removing redundant comments. Refactored test class constructors for consistency. Updated event handling tests to validate `Changing` and `Changed` events with cancellation tokens.

Modified `TnTTypeahead_Tests` to support debounce and search operations with cancellation tokens. Updated `TnTComponents.Tests.csproj` to enforce stricter quality standards by treating specific warnings as errors. General cleanup and documentation improvements.

--- a/TnTComponents.Tests/TnTComponents.Tests.csproj
+++ b/TnTComponents.Tests/TnTComponents.Tests.csproj
@@ -8,6 +8,26 @@
         <OutputType>Exe</OutputType>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0|AnyCPU'">
+      <WarningLevel>8</WarningLevel>
+      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051</WarningsAsErrors>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net10.0|AnyCPU'">
+      <WarningLevel>8</WarningLevel>
+      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051</WarningsAsErrors>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0|AnyCPU'">
+      <WarningLevel>8</WarningLevel>
+      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051</WarningsAsErrors>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net10.0|AnyCPU'">
+      <WarningLevel>8</WarningLevel>
+      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051</WarningsAsErrors>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="AwesomeAssertions" Version="9.2.0" />
         <PackageReference Include="AwesomeAssertions.Analyzers" Version="9.0.5">
