Refactor and enhance test suite for consistency
- Refactored indentation, formatting, and method definitions for improved readability.
- Updated method signatures to use nullable reference types (`string?`) for better nullability handling.
- Added `xUnit1012` to `WarningsAsErrors` in the project file to enforce stricter xUnit standards.
- Enhanced edge case handling for `LocalStorageService` and `SessionStorageService` methods.
- Improved test assertions to explicitly verify expected behavior and markup.
- Standardized test naming and removed redundant comments for consistency.
- Refactored helper methods like `RenderToastComponent` for compactness.
- Enhanced progress bar and timeout tests for toast components.
- Improved multiple toasts tests to ensure correct rendering limits.
- Adjusted `JSInterop` setups for better mocking of JavaScript functions.
- Added disposal tests to verify proper resource cleanup.
- Updated `TnTToast_Tests` constructor to include `SetRendererInfo` for conditional compilation.
- Cleaned up unused code and applied consistent formatting across all test files.

--- a/TnTComponents.Tests/TnTComponents.Tests.csproj
+++ b/TnTComponents.Tests/TnTComponents.Tests.csproj
@@ -10,22 +10,22 @@
 
     <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0|AnyCPU'">
       <WarningLevel>8</WarningLevel>
-      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051</WarningsAsErrors>
+      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051;xUnit1012</WarningsAsErrors>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net10.0|AnyCPU'">
       <WarningLevel>8</WarningLevel>
-      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051</WarningsAsErrors>
+      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051;xUnit1012</WarningsAsErrors>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0|AnyCPU'">
       <WarningLevel>8</WarningLevel>
-      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051</WarningsAsErrors>
+      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051;xUnit1012</WarningsAsErrors>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net10.0|AnyCPU'">
       <WarningLevel>8</WarningLevel>
-      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051</WarningsAsErrors>
+      <WarningsAsErrors>$(WarningsAsErrors);NU1605;xUnit1051;xUnit1012</WarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
