--- a/TnTComponents.Tests/TnTComponents.Tests.csproj
+++ b/TnTComponents.Tests/TnTComponents.Tests.csproj
@@ -23,10 +23,12 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="xunit.v3" Version="3.2.0-pre.10" />
+		<PackageReference Include="NSubstitute" Version="5.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\TnTComponents\TnTComponents.csproj" />
+		<ProjectReference Include="..\TnTComponents.AspNetCore\TnTComponents.AspNetCore.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
