Refactor IQueryableExt and add comprehensive tests
Refactored `IQueryableExt` methods to use expression-bodied members and simplified sorting logic with ternary operators for improved readability. Removed unused `using` directives and added necessary namespaces.

Introduced a new test class, `IQueryableExt_Tests`, with extensive unit tests to validate the `Apply` method, covering sorting, paging, filtering, and edge cases. Added test data models (`TestItem` and `TestItemWithNested`) to support the tests.

Updated `TnTComponents.Tests.csproj` to include a reference to `TnTComponents.Extensions`. Enhanced test coverage to ensure correctness under various scenarios, including multi-property sorting and nested property handling.

--- a/TnTComponents.Tests/TnTComponents.Tests.csproj
+++ b/TnTComponents.Tests/TnTComponents.Tests.csproj
@@ -29,6 +29,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\TnTComponents\TnTComponents.csproj" />
 		<ProjectReference Include="..\TnTComponents.AspNetCore\TnTComponents.AspNetCore.csproj" />
+		<ProjectReference Include="..\TnTComponents.Extensions\TnTComponents.Extensions.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
