--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,9 +3,14 @@
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+    - '**.md'
+    - '**/workflows/*.yml'
   pull_request:
     branches: [ main ]
-
+    paths-ignore:
+    - '**.md'
+    - '**/workflows/*.yml'
 jobs:
   deploy:
     runs-on: ubuntu-latest
