--- a/TnTComponents.AspNetCore/TnTComponents.AspNetCore.csproj
+++ b/TnTComponents.AspNetCore/TnTComponents.AspNetCore.csproj
@@ -13,6 +13,7 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageTags>Blazor;Components;AspNetCore;.NET8;.NET9</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PackageIcon>Logo.png</PackageIcon>
     </PropertyGroup>
 
     <ItemGroup>
@@ -24,6 +25,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Include="..\Logo.png">
+          <Pack>True</Pack>
+          <PackagePath>\</PackagePath>
+        </None>
         <None Include="..\README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 </Project>
