--- a/TnTComponents.Extensions/TnTComponents.Extensions.csproj
+++ b/TnTComponents.Extensions/TnTComponents.Extensions.csproj
@@ -11,10 +11,15 @@
         <RepositoryUrl>https://github.com/Notallthatevil/TnTComponents</RepositoryUrl>
         <PackageTags>Blazor;Components;.NET9;.NET10</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PackageIcon>Logo.png</PackageIcon>
 
     </PropertyGroup>
 
     <ItemGroup>
+        <None Include="..\Logo.png">
+          <Pack>True</Pack>
+          <PackagePath>\</PackagePath>
+        </None>
         <None Include="..\README.md">
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
