--- a/TnTComponents.Tests/TnTComponents.Tests.csproj
+++ b/TnTComponents.Tests/TnTComponents.Tests.csproj
@@ -12,12 +12,12 @@
 
 	<ItemGroup>
 		<PackageReference Include="AwesomeAssertions" Version="9.2.0" />
-		<PackageReference Include="AwesomeAssertions.Analyzers" Version="9.0.6">
+		<PackageReference Include="AwesomeAssertions.Analyzers" Version="9.0.8">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="bunit" Version="2.0.50-preview" />
-		<PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.1.0-preview.25412.3" />
+		<PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.1.0" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
