--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -39,7 +39,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="DartSassBuilder" Version="1.1.0" />
+		<PackageReference Include="AspNetCore.SassCompiler" Version="1.93.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0-rc.1.25451.107" />
 		<PackageReference Include="System.Text.Encodings.Web" Version="10.0.0-rc.1.25451.107" />
