--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "jest": {
     "testEnvironment": "jsdom",
     "roots": [
-        "<rootDir>/TnTComponents/Carousel/__tests__",
-        "<rootDir>/TnTComponents/Core/__tests__",
-        "<rootDir>/TnTComponents/Accordion/__tests__",
-        "<rootDir>/TnTComponents/Animation/__tests__",
-        "<rootDir>/TnTComponents/Editors/__tests__",
-        "<rootDir>/TnTComponents/TabView/__tests__",
-        "<rootDir>/TnTComponents/Theming/__tests__"
+      "<rootDir>/TnTComponents/Carousel/__tests__",
+      "<rootDir>/TnTComponents/Core/__tests__",
+      "<rootDir>/TnTComponents/Accordion/__tests__",
+      "<rootDir>/TnTComponents/Animation/__tests__",
+      "<rootDir>/TnTComponents/Editors/__tests__",
+      "<rootDir>/TnTComponents/TabView/__tests__",
+      "<rootDir>/TnTComponents/Theming/__tests__",
+      "<rootDir>/TnTComponents.Tests/wwwroot"
     ],
     "setupFiles": [
       "<rootDir>/TnTComponents/Carousel/jest.setup.js"
@@ -34,7 +35,8 @@
     "transform": {},
     "testMatch": [
       "**/__tests__/**/*.test.js",
-      "**/__tests__/**/*.spec.js"
+      "**/__tests__/**/*.spec.js",
+      "**/TnTComponents.Tests/**/*.test.js"
     ],
     "testPathIgnorePatterns": [
       "/node_modules/",
