Add charts page and multi-sort grid functionality
- Add a new charts page in `Charts.razor` with a sample bar chart using `NTComponents.Charts.NTBarChart`.
- Update `MainLayout.razor` to include a navigation link to the charts page.
- Modify `LiveTest.Client.csproj` to include a project reference to `NTComponents.Charts.csproj`.
- Enable multi-sort functionality in the grid:
  - Update `TnTColumnBase.razor` and `TnTInternalGridContext.cs` to support multi-column sorting.
  - Add `AllowMultiSort` parameter in `TnTDataGrid.razor.cs`.
- Update styling:
  - Adjust padding and grid template columns in `TnTColumnBase.razor.scss`.
  - Add padding for table cells in `TnTDataGridBodyCell.razor.scss`.
  - Include a transition effect for hover in `TnTDataGridBodyRow.razor.scss`.
- Update project files to newer package versions:
  - `LiveTest.csproj` and `TnTComponents.Tests.csproj` for package updates.
  - `TnTComponents.csproj` for updated package references.
- Add conditional compilation for Sass in `TnTServicesExt.cs`.
- Update `sasscompiler.json` to include a new folder for `Buttons`.

--- a/LiveTest/LiveTest.Client/LiveTest.Client.csproj
+++ b/LiveTest/LiveTest.Client/LiveTest.Client.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\NTComponents.Charts\NTComponents.Charts.csproj" />
     <ProjectReference Include="..\..\TnTComponents.Extensions\TnTComponents.Extensions.csproj" />
     <ProjectReference Include="..\..\TnTComponents\TnTComponents.csproj" />
   </ItemGroup>
