Upgrade packages and simplify CI/CD pipeline
- Updated the CI/CD pipeline in `ci-cd.yml`:
  - Removed the `-rc` suffix from `PackageVersion` in `dotnet pack` commands.
  - Removed the `dotnet nuget push` step.

- Updated `LiveTest.csproj`:
  - Upgraded `Microsoft.AspNetCore.Components.WebAssembly.Server` to `10.0.0`.
  - Upgraded `Microsoft.EntityFrameworkCore.InMemory` to `10.0.0`.

- Updated `TnTComponents.Tests.csproj`:
  - Upgraded `AwesomeAssertions` to `9.3.0`.
  - Upgraded `bunit` to `2.0.66`.
  - Upgraded `xunit.v3` to `3.2.0`.
  - Removed `Microsoft.Testing.Extensions.CodeCoverage`.

- Updated `TnTComponents.csproj`:
  - Upgraded `AspNetCore.SassCompiler` to `1.94.0`.
  - Upgraded `Microsoft.Extensions.Hosting.Abstractions` and `System.Text.Encodings.Web` to `10.0.0`.
  - Upgraded `Microsoft.AspNetCore.Components.WebAssembly`:
    - For `net9.0`, to `9.0.11`.
    - For `net10.0`, to `10.0.0`.

- Removed preview and unnecessary dependencies.
- Transitioned to stable package versions to improve reliability.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -93,9 +93,9 @@ jobs:
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
       run: |
-        dotnet pack TnTComponents/TnTComponents.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ steps.version_step.outputs.MajorMinorPatch }}-rc
-        dotnet pack TnTComponents.AspNetCore/TnTComponents.AspNetCore.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ steps.version_step.outputs.MajorMinorPatch }}-rc
-        dotnet pack TnTComponents.Extensions/TnTComponents.Extensions.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ steps.version_step.outputs.MajorMinorPatch }}-rc
+        dotnet pack TnTComponents/TnTComponents.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ steps.version_step.outputs.MajorMinorPatch }}
+        dotnet pack TnTComponents.AspNetCore/TnTComponents.AspNetCore.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ steps.version_step.outputs.MajorMinorPatch }}
+        dotnet pack TnTComponents.Extensions/TnTComponents.Extensions.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ steps.version_step.outputs.MajorMinorPatch }}
     - run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
 
     - name: Create GitHub Release
