Update CI/CD pipeline and test dependencies
- Updated `dotnet-version` in `ci-cd.yml` to target .NET 8.x.
- Modified `Build` step to use `dotnet build` with `Release` config.
- Reintroduced `Run dotnet tests with coverage` step:
  - Commented out coverage options due to lack of .NET 10 support.
- Removed unused/commented-out steps:
  - `dotnet-coverage` tool installation and report merging.
  - `Bump version and push tag` step using `github-tag-action`.
- Added `Publish TnTComponents to NuGet` step:
  - Uses `dotnet pack` to package and publish the project.
- Updated `TnTComponents.Tests.csproj` dependencies:
  - Added `coverlet.collector` (v6.0.4) for code coverage.
  - Added `Microsoft.NET.Test.Sdk` (v18.0.1) for test discovery/execution.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,8 +49,8 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release
 
-    #- name: Run dotnet tests with coverage
-    #  run: dotnet test --no-build --configuration Release --coverage --coverage-output-format cobertura --coverage-output coverage.cobertura.xml
+    - name: Run dotnet tests with coverage
+      run: dotnet test --no-build --configuration Release #--coverage-output-format cobertura --coverage-output coverage.cobertura.xml    Removed until coverage tool is fixed to support .NET 10
     #
     #- name: Install dotnet-coverage
     #  run: dotnet tool install --global dotnet-coverage
@@ -78,14 +78,6 @@ jobs:
       run: |
         npm install
         npm test 
-
-    #- name: Bump version and push tag
-    #  if: github.ref == 'refs/heads/main'
-    #  uses: anothrNick/github-tag-action@v1 # Don't use @master or @v1 unless you're happy to test the latest version
-    #  env:
-    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
-    #    WITH_V: false
-    #    CUSTOM_TAG: 'v${{ steps.version_step.outputs.MajorMinorPatch }}'
 
     - name: Publish TnTComponents to NuGet
       env:
