--- a/LiveTest/LiveTest/LiveTest.csproj
+++ b/LiveTest/LiveTest/LiveTest.csproj
@@ -1,30 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net10.0</TargetFramework>
+        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Remove="Microsoft.CodeAnalysis.Razor.Compiler.SourceGenerators\**" />
-      <Content Remove="Microsoft.CodeAnalysis.Razor.Compiler.SourceGenerators\**" />
-      <EmbeddedResource Remove="Microsoft.CodeAnalysis.Razor.Compiler.SourceGenerators\**" />
-      <None Remove="Microsoft.CodeAnalysis.Razor.Compiler.SourceGenerators\**" />
-    </ItemGroup>
-
-    <ItemGroup>
         <ProjectReference Include="..\..\TnTComponents.AspNetCore\TnTComponents.AspNetCore.csproj" />
         <ProjectReference Include="..\..\TnTComponents.Extensions\TnTComponents.Extensions.csproj" />
         <ProjectReference Include="..\LiveTest.Client\LiveTest.Client.csproj" />
-
     </ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.0" />
-    </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.11" />
+	</ItemGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.0" />
+	</ItemGroup>
     <ItemGroup>
       <Folder Include="wwwroot\Themes\" />
     </ItemGroup>
