--- a/TnTComponents.Tests/TnTComponents.Tests.csproj
+++ b/TnTComponents.Tests/TnTComponents.Tests.csproj
@@ -16,31 +16,39 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="bunit" Version="2.0.66" />
+		<PackageReference Include="bunit" Version="2.2.2" />
 		<PackageReference Include="coverlet.collector" Version="6.0.4">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+		<PackageReference Include="Microsoft.Playwright" Version="1.57.0" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="xunit.v3" Version="3.2.0" />
+		<PackageReference Include="xunit.v3" Version="3.2.1" />
 		<PackageReference Include="NSubstitute" Version="5.3.0" />
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.11" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.1" />
+	</ItemGroup>
+
 	<ItemGroup>
+		<ProjectReference Include="..\LiveTest\LiveTest\LiveTest.csproj" />
 		<ProjectReference Include="..\TnTComponents\TnTComponents.csproj" />
 		<ProjectReference Include="..\TnTComponents.AspNetCore\TnTComponents.AspNetCore.csproj" />
 		<ProjectReference Include="..\TnTComponents.Extensions\TnTComponents.Extensions.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Using Include="AwesomeAssertions" />
 		<Using Include="Bunit" />
-		<Using Include="TnTComponents" />
 		<Using Include="Xunit" />
+		<Using Include="AwesomeAssertions" />
 	</ItemGroup>
-
 </Project>
