--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-﻿name: Create Release
+name: Create Release
 
 on:
   workflow_dispatch:
@@ -46,6 +46,16 @@ jobs:
       with:
         dotnet-version: '8.x'
 
+    - uses: actions/setup-node@v5
+      with:
+        node-version: lts/*
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+
     - name: Build
       run: dotnet build --configuration Release
 
@@ -69,14 +79,8 @@ jobs:
     #    thresholds: '75 90'
     #    badge: true
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-
     - name: Run npm tests
-      run: |
-        npm install
+      run: 
         npm test 
 
     - name: Publish TnTComponents to NuGet
