chore(ci): run tests instead of build in deploy and PR
Changed deploy-to-nuget.yml to run dotnet test instead of dotnet build before publishing, ensuring tests are executed prior to packaging. In pr-build.yml, added an extra dotnet test run after coverage collection to guarantee tests are run both with and without coverage instrumentation.

--- a/.github/workflows/deploy-to-nuget.yml
+++ b/.github/workflows/deploy-to-nuget.yml
@@ -68,6 +68,9 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration ${{ inputs.configuration }} 
 
+      - name: Build
+        run: dotnet test --no-restore --configuration ${{ inputs.configuration }} 
+
       - name: Publish 
         run: |
             dotnet pack NTComponents/NTComponents.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ needs.retrieve-tag.outputs.tag_name }}
