chore(ci): add test step to deploy, disable PR coverage
Added a test step to deploy-to-nuget.yml to ensure tests run before publishing. In pr-build.yml, simplified the test step by removing code coverage collection and commented out the PR coverage summary step, disabling coverage reporting in pull requests.

--- a/.github/workflows/deploy-to-nuget.yml
+++ b/.github/workflows/deploy-to-nuget.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration ${{ inputs.configuration }} 
 
-      - name: Build
+      - name: Test
         run: dotnet test --no-restore --configuration ${{ inputs.configuration }} 
 
       - name: Publish 
