--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -37,18 +37,20 @@ jobs:
       - name: Install dotnet-coverage
         run: dotnet tool install --global dotnet-coverage
 
-      - name: Run all tests with coverage
+      - name: Run all 
+        #tests with coverage
         run: |
           dotnet test --no-restore --configuration Release 
+          #--collect:"XPlat Code Coverage" --results-directory ./TestResults
 
-      - name: Post coverage summary to PR
-        if: github.event_name == 'pull_request'
-        uses: 5monkeys/cobertura-action@v13
-        with:
-          path: ./TestResults/**/*.cobertura.xml
-          minimum_coverage: ${{ env.COVERAGE_THRESHOLD }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          fail_below_threshold: true
-          show_line: true
-          show_class_names: true
-          only_changed_files: true
+      # - name: Post coverage summary to PR
+      #   if: github.event_name == 'pull_request'
+      #   uses: 5monkeys/cobertura-action@v13
+      #   with:
+      #     path: ./TestResults/**/*.cobertura.xml
+      #     minimum_coverage: ${{ env.COVERAGE_THRESHOLD }}
+      #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+      #     fail_below_threshold: true
+      #     show_line: true
+      #     show_class_names: true
+      #     only_changed_files: true
