chore(ci): set explicit .NET 8.0.x version in workflow
Updated ensure-aot-build.yml to explicitly use .NET 8.0.x for one setup-dotnet step, instead of relying solely on the ${{ env.DOTNET_VERSION }} variable. This ensures consistent .NET version usage in the CI pipeline.

--- a/.github/workflows/ensure-aot-build.yml
+++ b/.github/workflows/ensure-aot-build.yml
@@ -1,4 +1,4 @@
-﻿name: Publish AOTCompatibility testApp
+name: Publish AOTCompatibility testApp
 
 on:
   push:
@@ -33,12 +33,7 @@ jobs:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
-
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
+        dotnet-version: 8.0.x
 
     - name: Setup dotnet
       uses: actions/setup-dotnet@v4
