docs(ci): clarify test step comment in pr-build.yml
Updated the comment for the "Run all tests" step in pr-build.yml for improved clarity. Changed "#tests with coverage" to "#with coverage". No functional or behavioral changes were made.

--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Install dotnet-coverage
         run: dotnet tool install --global dotnet-coverage
 
-      - name: Run all 
-        #tests with coverage
+      - name: Run all tests
+        #with coverage
         run: |
           dotnet test --no-restore --configuration Release 
           #--collect:"XPlat Code Coverage" --results-directory ./TestResults
