feat(workflow): add Node.js and Playwright setup steps
The workflow now installs Node.js (LTS), npm dependencies, and Playwright browsers before running tests. This enables JavaScript/TypeScript and Playwright-based testing alongside existing .NET test steps.

--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -37,6 +37,16 @@ jobs:
       - name: Install dotnet-coverage
         run: dotnet tool install --global dotnet-coverage
 
+      - uses: actions/setup-node@v5
+        with:
+          node-version: lts/*
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
       - name: Run all tests
         #with coverage
         run: |
